blackroth-hrms-devsecops/terraform/main.tf
provider "aws" {
  region = "eu-north-1"
}

resource "aws_subnet" "public" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
}
